# Parallel

./: CMakeLists.txt  fixtures.h  graph.h  main.cpp  test_correctness.h  test_data.h
openmp_bf/: implementation.h  test.h
pthread_bf/: implementation.h  test.h
sequential/: sequential.h  test.h
